argocd-apps/cnss/05-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnss-backend
  namespace: cnss
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cnss-backend
  template:
    metadata:
      labels:
        app: cnss-backend
    spec:
      containers:
        - name: cnss-backend
          image: yermanimohamed/cnss_backend:1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8089
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          readinessProbe:
            tcpSocket:
              port: 8089
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8089
            initialDelaySeconds: 45
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: cnss-backend-service
  namespace: cnss
spec:
  selector:
    app: cnss-backend
  ports:
    - port: 8089
      targetPort: 8089
  type: ClusterIP
