argocd-apps/cnss/06-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnss-frontend
  namespace: cnss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnss-frontend
  template:
    metadata:
      labels:
        app: cnss-frontend
    spec:
      containers:
        - name: cnss-frontend
          image: yermanimohamed/cnss_frontend:1.0.3   # <-- ADAPTEZ à votre vraie image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: cnss-frontend-service
  namespace: cnss
spec:
  selector:
    app: cnss-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
