argocd-apps/cnss/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnss-ingress
  namespace: cnss
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: cnss.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cnss-backend-service
                port:
                  number: 8089
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cnss-frontend-service
                port:
                  number: 80
